fixed scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,6 @@ a {
     color: #4a5a5a;
     background-color: #e5e2e7;
 }
-
 #channels-list-container {
     position: absolute;
     top: 60px;
@@ -73,9 +72,6 @@ a {
     right: 0;
     bottom: 0;
     background-color: #f2f2f2;
-    overflow-y: scroll;
-}
-#channels-list {
     overflow-y: scroll;
 }
 .channel {
